(bug 19524) Move hiding initially hidden collapsable tables from monobook/main.css to common/shared.css

--- a/skins/common/shared.css
+++ b/skins/common/shared.css
@@ -515,6 +515,11 @@ table.wikitable {
     font-weight: bold;
 }
 
+/* hide initially collapsed collapsable tables */
+table.collapsed tr.collapsable {
+	display: none;
+}
+
 /* success and error messages */
 .success {
 	color: green;
